fix button text not showing on iOS safari all of a sudden 😮

--- a/src/index.css
+++ b/src/index.css
@@ -192,6 +192,7 @@ button {
   height: 100%;
   min-width: 52px;
   width: calc(100% - 6px);
+  color: #000;
 }
 
 /* ========================================== CHART STYLES ========================================== */
